fix: release deploy config paths fixed